# Pomodoro_Timer

./: ER.drawio  README.md  compose.yml  config.py  docker-compose.yml
backend/: .gitignore  app.py  config.py  db.py  dockerfile  main.py  models.py  pyproject.toml  requirements.txt  settings.py  user.py
backend/api/: login.py  schedule.py  study_record.py  users.py
backend/app/: main.py
backend/app/api/: ai.py  calendar.py  study_record.py  users.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: d419d9e72d55_initial_migration.py
backend/app/models/: models.py  settings.py
backend/instance/: Timerdb.sqlite
backend/migrations/: env.py
backend/migrations/versions/: 25000fbfb109_add_users_column.py  2e43e32afecf_create_studyhistory.py  507e9b129cf6_create_table_chats.py  59db9c4cd195_add_column_user_id.py  7b3c324a77ea_add_users_tablecreate.py  8127a96f8e24_delete_column_username.py  84e8b5db04b9_create_tables.py  9f15d32068a0_add_column_username.py  9f84ae257673_change_studyhistory.py  a703ce7f716e_create_tables.py  a8318ec39624_create_tables.py  b6248a4fcba7_add_users_certification.py
backend/models/: models.py  settings.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  page.tsx  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  元ファイル.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/context/: EventContext.tsx
frontend/src/lib/: deteleSchedule.ts  getSchedule.ts  postSchedule.ts  postStudyHistory.ts  updateSchedule.ts
nginx/: default.conf
(+47 files in other folders)
