[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt<4.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic-ai>=0.6.2",
    "pydantic-ai-slim[groq]>=0.6.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "ruff>=0.12.8",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
